Fixed some spacing

--- a/style.css
+++ b/style.css
@@ -557,11 +557,12 @@ h2 {
         gap: 20px;
         margin-right: 0; 
         margin-left: 0;
-        padding: 40px 0;
+        padding: 0 0;
         justify-content: center; /* Horizontally center items */
         align-items: center;
 
     }
+
 
     #grad-pic {
         max-width: 150px;
@@ -723,6 +724,15 @@ h2 {
         align-items: center;
         margin-right: 0; 
         margin-left : 11%;
+    }
+
+    .background {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90%;
+        z-index: -1; 
     }
 }
 
